Add comments to login.html

--- a/Develop/public/login.html
+++ b/Develop/public/login.html
@@ -9,6 +9,8 @@
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
+<!-- HTML for the login page -->
+
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -19,6 +21,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
+        <!-- Form for login that contains inputs for email and password -->
         <h2>Login Form</h2>
         <form class="login">
           <div class="form-group">
@@ -37,6 +40,7 @@
     </div>
   </div>
 
+  <!-- Includes script from login.js which includes jQuery to pull values from the form inputs -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
 
