--- a/Develop/public/members.html
+++ b/Develop/public/members.html
@@ -9,24 +9,28 @@
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
+<!-- HTML for members page -->
+
 <body>
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/logout">
+          Logout
+        </a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
   <div class="container">
     <div class="row">
+      <!-- Will display "Welcome" + the member's name on the page -->
       <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
       </div>
     </div>
   </div>
 
+  <!-- Includes script from members.js which includes jQuery to display the member's name in the div -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
 
