--- a/Develop/public/signup.html
+++ b/Develop/public/signup.html
@@ -9,6 +9,8 @@
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
+<!-- HTML for the signup page -->
+
 <body>
   <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -20,6 +22,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Sign Up Form</h2>
+        <!-- Form for signup that includes email and password inputs -->
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -41,6 +44,7 @@
     </div>
   </div>
 
+  <!-- Includes script from signup.js which includes jQuery to pull values from the form -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
 
